--- a/src/Bio/bio.html
+++ b/src/Bio/bio.html
@@ -3,23 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bio Page</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Bio</title>
+    <link rel="stylesheet" href="bio.css
+    ">
 </head>
 <body>
     <header>
-        <h1>My Bio</h1>
-    </header>
-    <main>
-        <section id="bio">
+        <nav class="navbar">
             <div class="container">
-                <h2>Interests</h2>
-                <p>Here you can list your interests.</p>
-                <h2>Skills</h2>
-                <p>Here you can list your skills.</p>
+                <h1 class="logo">My Website</h1>
+                <ul class="nav-menu">
+                    <li><a href="src/index/index.html">Home</a></li>
+                    <li><a href="src/bio/bio.html">Bio</a></li>
+                    <li><a href="src/experience/experience.html">Experience</a></li>
+                    <li><a href="src/portfolio/portfolio.html">Portfolio</a></li>
+                </ul>
             </div>
+        </nav>
+    </header>
+
+    <main>
+        <section class="container">
+            <h2>Bio</h2>
+            <p>This is where you can write about yourself, your interests, skills, and anything else you want to share.</p>
         </section>
     </main>
+
     <footer>
         <p>&copy; 2024 Your Name</p>
     </footer>
